--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,5 @@ spring.datasource.username=sa
 spring.datasource.password=
 spring.h2.console.enabled=true
 spring.h2.console.authorize-mode=NONE
+
+server.error.include-stacktrace=never
